--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -118,19 +118,20 @@ body {
     text-align: center;
     font-size: 20px; }
   /* estilo del footer */
-  .inicio a {
+  .final {
+    background-color: #b39e58;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 1rem;
-    color: #241811;
-    text-decoration: none;
-    list-style: none;
-    font-weight: bolder;
-    font-size: 1.2rem;
-    text-shadow: 1px 1px 5px black; } }
+    padding: 0.5rem; }
+    .final h2 {
+      padding: 0.4rem;
+      color: #241811; }
+    .final div p {
+      padding: 0.4rem;
+      color: #241811; } }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 600px) and (min-width: 1024px) {
   /* Seccion Equipo */
   /* estilo del header */
   .staff img {
@@ -159,17 +160,18 @@ body {
       .team img:hover {
         filter: drop-shadow(2px 2px 5px #F81C1C); }
   /* estilo del footer */
-  .inicio a {
+  .final {
+    background-color: #b39e58;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 1rem;
-    color: #241811;
-    text-decoration: none;
-    list-style: none;
-    font-weight: bolder;
-    font-size: 1.2rem;
-    text-shadow: 1px 1px 5px black; } }
+    padding: 2rem; }
+    .final h2 {
+      padding: 0.4rem;
+      color: #241811; }
+    .final div p {
+      padding: 0.4rem;
+      color: #241811; } }
 
 /* estilo del header */
 .times {
@@ -206,16 +208,11 @@ body {
     align-items: center; }
 
 /* estilo del footer */
-.inicio {
-  background-color: #b39e58;
-  text-align: center;
-  padding: 2rem; }
-  .inicio a {
-    align-items: center;
-    text-decoration: none;
-    list-style: none;
-    color: black;
-    font-weight: bold; }
+.final .end a {
+  text-decoration: none;
+  font-weight: bold;
+  color: black;
+  list-style: none; }
 
 @media screen and (min-width: 600px) {
   /*estilo del main*/
@@ -249,7 +246,10 @@ body {
       .actividad .ubi img {
         width: 25%; }
       .actividad .ubi p {
-        font-weight: bold; } }
+        font-weight: bold; }
+  /* estilo footer */
+  .final .end a {
+    display: none; } }
 
 /* mq de seccion horarios de 1024px */
 @media screen and (min-width: 1024px) {
@@ -283,19 +283,7 @@ body {
         width: 60%;
         margin-left: 1rem; }
       .actividad .ubi p {
-        font-weight: bold; }
-  /* seccion del footer */
-  .inicio a {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 1rem;
-    color: #241811;
-    text-decoration: none;
-    list-style: none;
-    font-weight: bolder;
-    font-size: 1.2rem;
-    text-shadow: 1px 1px 5px black; } }
+        font-weight: bold; } }
 
 /* estilos de index para celulares */
 /* estilos del header */
@@ -468,19 +456,7 @@ body {
     .nota img {
       width: 80%;
       border: 2px solid black;
-      margin: 20px; }
-  /* estilo del footer */
-  .inicio a {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 1rem;
-    color: #241811;
-    text-decoration: none;
-    list-style: none;
-    font-weight: bolder;
-    font-size: 1.2rem;
-    text-shadow: 1px 1px 5px black; } }
+      margin: 20px; } }
 
 .inicio a:hover {
   transform: scale(0.8); }
